// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should not use siret2idcc when no entreprise result 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="xxxx"
    />
  </span>
  <div
    class="sc-hYRTwp jhQINW"
  >
    <div
      class="sc-jSFjdj sc-fyjqAk dftIwI bUpYYm"
    >
      <h3
        class="sc-iCoGMd gaXVHn"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (1
         
        résultat)
      </h3>
      <ul
        class="sc-jffHpj jAxtJd"
      >
        <li
          class="sc-iXeHaJ gxasLI"
        >
          <button
            class="sc-hiKfDv eWfpdP sc-kTCsyW jThxDW"
          >
            small title 1
             
            <span
              class="sc-dvUynV kVDqau"
            >
              (IDCC 
              0275
              )
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should render 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value=""
    />
  </span>
  
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show no results when no result 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="9999"
    />
  </span>
  <div
    class="sc-hYRTwp jhQINW"
  >
    <p
      class="sc-cOifOu jBNwUz"
    >
      Aucun résultat n’a été trouvé.
    </p>
  </div>
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show spinner when loading 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="8888"
    />
  </span>
  <div
    class="sc-hYRTwp jhQINW"
  >
    <p
      class="sc-cOifOu jBNwUz"
    >
      <svg
        aria-labelledby="title desc"
        class="__react-svg-spinner_circle"
        height="1em"
        role="img"
        style="animation-duration: 750ms;"
        viewBox="0 0 32 32"
        width="1em"
      >
        <title
          id="title"
        >
          Circle loading spinner
        </title>
        <desc
          id="desc"
        >
          Image of a partial circle indicating "loading."
        </desc>
        <style>
          
      .__react-svg-spinner_circle{
          transition-property: transform;
          animation-name: __react-svg-spinner_infinite-spin;
          animation-iteration-count: infinite;
          animation-timing-function: linear;
      }
      @keyframes __react-svg-spinner_infinite-spin {
          from {transform: rotate(0deg)}
          to {transform: rotate(360deg)}
      }
    
        </style>
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="12"
          role="presentation"
          stroke="rgba(0,0,0,0.4)"
          stroke-dasharray="43.982297150257104"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
       Recherche des convention collectives...
    </p>
  </div>
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is IDCC, should search conventions 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="1234"
    />
  </span>
  <div
    class="sc-hYRTwp jhQINW"
  >
    <div
      class="sc-jSFjdj sc-fyjqAk dftIwI bUpYYm"
    >
      <h3
        class="sc-iCoGMd gaXVHn"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (2
         
        résultats)
      </h3>
      <ul
        class="sc-jffHpj jAxtJd"
      >
        <li
          class="sc-iXeHaJ gxasLI"
        >
          <a
            class="sc-kTCsyW jThxDW"
            href="/convention-collective/275-small-titre"
          >
            small titre
             
            <span
              class="sc-dvUynV kVDqau"
            >
              (IDCC 
              0275
              )
            </span>
          </a>
        </li>
        <li
          class="sc-iXeHaJ gxasLI"
        >
          <a
            class="sc-kTCsyW fmREus"
            href="/convention-collective/276-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-dvUynV kVDqau"
            >
              (IDCC 
              0276
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is a valid IDCC, should show only the perfect match 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="4567"
    />
  </span>
  <div
    class="sc-hYRTwp jhQINW"
  >
    <div
      class="sc-jSFjdj sc-fyjqAk dftIwI bUpYYm"
    >
      <h3
        class="sc-iCoGMd gaXVHn"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (1
         
        résultat)
      </h3>
      <ul
        class="sc-jffHpj jAxtJd"
      >
        <li
          class="sc-iXeHaJ gxasLI"
        >
          <a
            class="sc-kTCsyW jThxDW"
            href="/convention-collective/4567-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-dvUynV kVDqau"
            >
              (IDCC 
              4567
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when searching SIREN, should use API SIREN and siret2idcc 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="012345678"
    />
  </span>
  <div
    class="sc-hYRTwp jhQINW"
  >
    <div
      class="sc-jSFjdj sc-fyjqAk dftIwI bUpYYm"
    >
      <h3
        class="sc-iCoGMd gaXVHn"
        data-testid="heading"
      >
        ENTREPRISES (1
         
        résultat)
      </h3>
      <ul
        class="sc-jffHpj jAxtJd"
      >
        <li
          class="sc-iXeHaJ gxasLI"
        >
          <div
            class="sc-jtiXyc eMnDEJ"
          >
            Entreprise 2 93100 Commune test 1
          </div>
          <button
            class="sc-hiKfDv eWfpdP sc-kTCsyW kZZWQL"
          >
             
            <span
              class="sc-dvUynV kVDqau"
            >
              (IDCC 
              0843
              )
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when searching SIRET, should use API SIREN and siret2idcc 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="01234567891011"
    />
  </span>
  <div
    class="sc-hYRTwp jhQINW"
  >
    <p
      class="sc-cOifOu jBNwUz"
    >
      Le service de recherche est indisponible.
    </p>
  </div>
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when searching by text, should use ES, api SIREN and siret2idcc 1`] = `
<div>
  <label
    class="sc-dTSzeu btJghr"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQCEYZ iOBpgY sc-jLqRGG jXoiKy"
  >
    <input
      class="sc-fXgAZx esWNAb"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="hello"
    />
  </span>
  <div
    class="sc-hYRTwp jhQINW"
  >
    <div
      class="sc-jSFjdj sc-fyjqAk dftIwI bUpYYm"
    >
      <h3
        class="sc-iCoGMd gaXVHn"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (1
         
        résultat)
      </h3>
      <ul
        class="sc-jffHpj jAxtJd"
      >
        <li
          class="sc-iXeHaJ gxasLI"
        >
          <button
            class="sc-hiKfDv eWfpdP sc-kTCsyW jThxDW"
          >
            titre convention 1
             
            <span
              class="sc-dvUynV kVDqau"
            >
              (IDCC 
              0275
              )
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="sc-jSFjdj sc-fyjqAk dftIwI bUpYYm"
    >
      <h3
        class="sc-iCoGMd gaXVHn"
        data-testid="heading"
      >
        ENTREPRISES (1
         
        résultat)
      </h3>
      <ul
        class="sc-jffHpj jAxtJd"
      >
        <li
          class="sc-iXeHaJ gxasLI"
        >
          <div
            class="sc-jtiXyc eMnDEJ"
          >
            Entreprise 1 93100 Commune test
          </div>
          <button
            class="sc-hiKfDv eWfpdP sc-kTCsyW kZZWQL"
          >
            Short Convention 1
             
            <span
              class="sc-dvUynV kVDqau"
            >
              (IDCC 
              0843
              )
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-bUQyIj eqjFlE"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-tsGVs cQiTYY"
    >
      Consultez
       
      <button
        class="sc-hiKfDv eWfpdP sc-dSnXvR fivlYt"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;
